Support rider 2022.2 (#128)
* support rider 2022.2

Signed-off-by: shalom <shalom938@gmail.com>

* upgrade to rider 2022.2

Signed-off-by: shalom <shalom938@gmail.com>

* upgrade to rider 2022.2

Signed-off-by: shalom <shalom938@gmail.com>

* upgrade to rider 2022.2

Signed-off-by: shalom <shalom938@gmail.com>