@@ -157,6 +157,8 @@ tasks {
         // Rider's backend doesn't support dynamic plugins. It might be possible to work with auto-reload of the frontend
         // part of a plugin, but there are dangers about keeping plugins in sync
         autoReloadPlugins.set(false)
+        //workaround, it's a Gradle IntelliJ Plugin issue
+        jvmArgs = listOf("--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED")
     }
 
 
@@ -164,7 +166,7 @@ tasks {
 //        types.set(listOf("RD","IC","PC","IU"))
         types.set(listOf("RD"))
         sinceVersion.set("2022.1")
-        untilVersion.set("2022.1.2")
+        untilVersion.set("2022.2")
 //        sinceBuild.set("221.5787.35")
 //        untilBuild.set("221.5591.21")
     }
@@ -203,7 +205,7 @@ tasks {
 
     create("printVersion", DefaultTask::class.java) {
         doLast {
-            println("The project current version is ${project.semanticVersion.version.get()}")
+            logger.lifecycle("The project current version is ${project.semanticVersion.version.get()}")
         }
     }
 
